--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "devDependencies": {
     "@playwright/test": "^1.30.0",
     "@types/jest": "^29.4.0",
+    "allure-commandline": "^2.21.0",
+    "jasmine": "^4.5.0",
+    "jasmine-allure-reporter": "^1.0.2",
     "jest": "^29.4.1",
+    "jest-allure": "^0.1.3",
     "jest-playwright-preset": "^3.0.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "jest-cli": "^29.4.1"
+    "jest-cli": "^29.4.1",
+    "playwright": "^1.30.0"
   }
 }
